<resources>
    <string name="app_name">TwitterClone</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Latest Tweets UI -->
    <string name="user_name">Fabrizio Romano</string>
    <string name="user_handle">"\@"FabrizioRomano</string>
    <string name="user_tweet">This Artemis space program is so beautiful. I am enjoying following it every step of the way.</string>
    <string name="text_comment_count">12</string>
    <string name="text_retweet_count">18</string>
    <string name="text_like_count">35</string>
    <string name="retry">Retry</string>


    <!-- Tweets UI -->
    <string name="dot">•</string>
    <string name="retweets">Retweets</string>
    <string name="quote_tweets">Quote Tweets</string>
    <string name="likes">Likes</string>
    <string name="tweet_your_reply">Tweet your reply</string>
    <string name="logo">logo</string>
</resources>