<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp">

    <com.osaigbovo.twitterclone.widget.ProfileImageView
        android:id="@+id/image_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/helvetica_neue_lt_pro_bold"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="@+id/image_profile"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/text_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/helvetica_neue_lt_pro"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_name"
        tools:text="@string/user_handle" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/helvetica_neue_lt_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_handle"
        tools:text="36m" />

    <com.google.android.material.internal.CheckableImageButton
        android:id="@+id/button_more"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="0dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/text_time"
        app:layout_constraintStart_toEndOf="@+id/text_time"
        app:layout_constraintTop_toTopOf="@+id/text_time"
        app:srcCompat="@drawable/ic_more" />

    <TextView
        android:id="@+id/text_tweet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/helvetica_neue_lt_pro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        tools:text="@string/user_tweet" />

    <ImageView
        android:id="@+id/image_tweet"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/text_tweet"
        app:layout_constraintStart_toStartOf="@+id/text_tweet"
        app:layout_constraintTop_toBottomOf="@+id/text_tweet"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.internal.CheckableImageButton
        android:id="@+id/button_comment"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="@+id/image_tweet"
        app:layout_constraintTop_toBottomOf="@+id/image_tweet"
        app:srcCompat="@drawable/ic_comment" />

    <TextView
        android:id="@+id/text_comment_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/helvetica_neue_lt_pro"
        android:text="@string/text_comment_count"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_comment"
        app:layout_constraintStart_toEndOf="@+id/button_comment"
        app:layout_constraintTop_toTopOf="@+id/button_comment" />

    <com.google.android.material.internal.CheckableImageButton
        android:id="@+id/button_retweet"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/button_comment"
        app:layout_constraintStart_toEndOf="@+id/text_comment_count"
        app:layout_constraintTop_toTopOf="@+id/button_comment"
        app:srcCompat="@drawable/ic_retweet" />

    <TextView
        android:id="@+id/text_retweet_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:fontFamily="@font/helvetica_neue_lt_pro"
        android:text="@string/text_retweet_count"
        app:layout_constraintBottom_toBottomOf="@+id/button_retweet"
        app:layout_constraintStart_toEndOf="@+id/button_retweet"
        app:layout_constraintTop_toTopOf="@+id/button_retweet" />

    <com.google.android.material.internal.CheckableImageButton
        android:id="@+id/button_like"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/button_retweet"
        app:layout_constraintStart_toEndOf="@+id/text_retweet_count"
        app:layout_constraintTop_toTopOf="@+id/button_retweet"
        app:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/text_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/helvetica_neue_lt_pro"
        android:text="@string/text_like_count"
        app:layout_constraintBottom_toBottomOf="@+id/button_like"
        app:layout_constraintStart_toEndOf="@+id/button_like"
        app:layout_constraintTop_toTopOf="@+id/button_like" />

    <com.google.android.material.internal.CheckableImageButton
        android:id="@+id/button_share"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/button_like"
        app:layout_constraintStart_toEndOf="@+id/text_like_count"
        app:layout_constraintTop_toTopOf="@+id/button_like"
        app:srcCompat="@drawable/ic_share" />

</androidx.constraintlayout.widget.ConstraintLayout>