<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/twitter_night"
    tools:context=".ui.detail.DetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <View
            android:id="@+id/zero_line"
            style="@style/Divider"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/twitter_extra_extra_light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.osaigbovo.twitterclone.widget.ProfileImageView
            android:id="@+id/image_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:aiv_borderWidth="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/helvetica_neue_lt_pro_bold"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_handle"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/user_name" />

        <TextView
            android:id="@+id/text_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/helvetica_neue_lt_pro"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/text_tweet"
            app:layout_constraintStart_toStartOf="@+id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:text="@string/user_handle" />

        <com.google.android.material.internal.CheckableImageButton
            android:id="@+id/button_more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/text_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_name"
            app:srcCompat="@drawable/ic_more" />

        <TextView
            android:id="@+id/text_tweet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/helvetica_neue_lt_pro_bold"
            android:lineSpacingExtra="6dp"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_profile"
            tools:text="@string/user_tweet" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_tweet"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/text_tweet"
            app:layout_constraintStart_toStartOf="@+id/text_tweet"
            app:layout_constraintTop_toBottomOf="@+id/text_tweet"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_time_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/helvetica_neue_lt_pro"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_tweet"
            tools:text="7:31" />

        <TextView
            android:id="@+id/text_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/dot"
            android:textColor="@color/twitter_extra_extra_light_gray"
            app:layout_constraintBottom_toBottomOf="@+id/text_time_day"
            app:layout_constraintStart_toEndOf="@+id/text_time_day"
            app:layout_constraintTop_toTopOf="@+id/text_time_day" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/helvetica_neue_lt_pro"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_time_day"
            app:layout_constraintStart_toEndOf="@+id/text_dot"
            app:layout_constraintTop_toTopOf="@+id/text_time_day"
            app:layout_constraintVertical_bias="1.0"
            tools:text="24 Mar 21" />

        <View
            android:id="@+id/first_line"
            style="@style/Divider"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/twitter_extra_extra_light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_time_day" />

        <TextView
            android:id="@+id/text_retweet_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/helvetica_neue_lt_pro_bold"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_line"
            tools:text="@string/text_comment_count" />

        <TextView
            android:id="@+id/text_retweet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/helvetica_neue_lt_pro"
            android:text="@string/retweets"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_retweet_count"
            app:layout_constraintStart_toEndOf="@+id/text_retweet_count"
            app:layout_constraintTop_toTopOf="@+id/text_retweet_count" />

        <TextView
            android:id="@+id/text_quote_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/helvetica_neue_lt_pro_bold"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_retweet_title"
            app:layout_constraintTop_toTopOf="@+id/text_retweet_title"
            tools:text="@string/text_retweet_count" />

        <TextView
            android:id="@+id/text_quote_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/helvetica_neue_lt_pro"
            android:text="@string/quote_tweets"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_quote_count"
            app:layout_constraintStart_toEndOf="@+id/text_quote_count"
            app:layout_constraintTop_toTopOf="@+id/text_quote_count" />

        <TextView
            android:id="@+id/text_like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/helvetica_neue_lt_pro_bold"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text_quote_title"
            app:layout_constraintTop_toTopOf="@+id/text_quote_title"
            tools:text="@string/text_like_count" />

        <TextView
            android:id="@+id/text_like_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/helvetica_neue_lt_pro"
            android:text="@string/likes"
            android:textColor="@color/twitter_extra_extra_light_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_like_count"
            app:layout_constraintStart_toEndOf="@+id/text_like_count"
            app:layout_constraintTop_toTopOf="@+id/text_like_count" />

        <View
            android:id="@+id/second_line"
            style="@style/Divider"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/twitter_extra_extra_light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_retweet_count" />


        <com.google.android.material.internal.CheckableImageButton
            android:id="@+id/button_comment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/button_retweet"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/second_line"
            app:srcCompat="@drawable/ic_comment" />

        <com.google.android.material.internal.CheckableImageButton
            android:id="@+id/button_retweet"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/button_comment"
            app:layout_constraintEnd_toStartOf="@+id/button_like"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_comment"
            app:layout_constraintTop_toTopOf="@+id/button_comment"
            app:srcCompat="@drawable/ic_retweet" />

        <com.google.android.material.internal.CheckableImageButton
            android:id="@+id/button_like"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/button_retweet"
            app:layout_constraintEnd_toStartOf="@+id/button_share"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_retweet"
            app:layout_constraintTop_toTopOf="@+id/button_retweet"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_like" />

        <com.google.android.material.internal.CheckableImageButton
            android:id="@+id/button_share"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@+id/button_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_like"
            app:layout_constraintTop_toTopOf="@+id/button_like"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_share" />

        <View
            android:id="@+id/third_line"
            style="@style/Divider"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/twitter_extra_extra_light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_share" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editText_tweet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@null"
        android:backgroundTint="@color/twitter_dark_gray"
        android:ems="10"
        android:hint="@string/tweet_your_reply"
        android:inputType="textPersonName"
        android:lines="5"
        android:textColor="@color/white"
        android:textColorHint="@color/twitter_dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>